Render Mappings more Compact in GET /_cluster/state
This deduplicates index mappings in the `/_cluster_state` response.
This significantly reduces the response size for large cluster states,
making this debug API easier to read for humans (because understanding
whether or not mappings are duplicated across indices might be valuable)
and more importantly less ressource hungry as far as serialization goes.